--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- This is my first project added to git -->
     <head>
         <title>JavaScript - Age Calculator</title>
         <link rel="stylesheet" href="styles.css">
